--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <html>
   <head>
+      <link rel="stylesheet" href="./style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="./style.css"
-    />
     <title>DH</title>
   </head>
-  <body style="background-color:#222844">
-      <h4 style="text-align:center; color:white;">DH</h>
+  <body>
+      <h4 class="txt"">DH</h>
       <p class="txt">This is an API Based Model off OpenAI</p>
     <div id="terminal"></div>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script>    
   </body>
 </html>
 <!-- 
