--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <body>
       <h4 class="txt"">DH</h>
       <p class="txt">This is an API Based Model off OpenAI</p>
-    <div id="terminal" on click="redirect()"></div>
+    <div id="terminal"></div>
+<button onclick="redirect()">Click Me</button>
     <script src="./script.js"></script>    
   </body>
 </html>
