--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>DH</title>
   </head>
   <body>
-      <h4 class="txt"">DH</h>
-      <p class="txt">This is an API Based Model off OpenAI</p>
+      <h4 class="txt"">DH: This is an API based forked bot off gpt-3</h>
+      <p class="txt">Jan 15 Update</p>
     <div id="terminal"></div>
 <button onclick="redirect()">Click Me</button>
     <script src="./script.js"></script>    
