--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>DH</title>
   </head>
   <body>
-      <h4 class="txt"">DH: This is an API based forked bot off gpt-3</h>
+      <h4 class="txt">DH: This is an API based forked bot off gpt-3</h>
       <p class="txt">Jan 15 Update</p>
     <div id="terminal"></div>
 <button onclick="redirect()">Click Me</button>
