--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
       <h4 class="txt">DH: This is an API based forked bot off gpt-3</h>
-      <p class="txt">Jan 15 Update</p>
+      <p class="txt" id="info">Jan 15 Update</p>
     <div id="terminal"></div>
-<button onclick="redirect()">Click Me</button>
+<button onclick="redirect()">Why is it not Working</button>
     <script src="./script.js"></script>    
   </body>
 </html>
