--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h4 class="txt">DH: This is an API based forked bot off gpt-3</h>
       <p class="txt" id="info">Jan 15 Update</p>
     <div id="terminal"></div>
-<button onclick="redirect()">Why is it not Working</button>
+<button is="redirect" onclick="redirect()">Redirect</button>
     <script src="./script.js"></script>    
   </body>
 </html>
